# vlaaicutter-django

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .editorconfig  requirements.txt  setup.cfg
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: asgi.py  settings.py  wsgi.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/config/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/main/: apps.py
