[metadata]
name = {{cookiecutter.project_slug}}
version = {{cookiecutter.version}}
author = {{cookiecutter.project_slug}}
description = {{cookiecutter.project_slug}}
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[entry_points]
console_scripts =
    {{cookiecutter.project_slug}}-manage = {{cookiecutter.project_slug}}.manage:main

[flake8]
max-line-length = 120
exclude =
    .env,
    .venv
